--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,8 @@
   }
 
   .article-content p {
-    margin-bottom: 24px;
+    /* margin-bottom: 24px; */
+    margin-bottom: 2px;
     text-indent: 2em;
   }
 
@@ -64,7 +65,7 @@
     color: #5A5A5A;
     border-left: 4px solid #C8A882;
     padding-left: 32px;
-    margin: 40px 0;
+    margin: 0px 0;
   }
 
   /* Smooth Scrolling */
